--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mysql-migrations": "^1.0.6",
     "nodemon": "^1.19.4"
   }
 }
