--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "nodemon main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +15,15 @@
     "mysql": "^2.17.1",
     "mysql-migrations": "^1.0.6",
     "nodemon": "^1.19.4"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
