--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -15,6 +15,7 @@
     "react-native-web": "^0.11.7"
   },
   "devDependencies": {
+    "babel-plugin-root-import": "^6.4.1",
     "babel-preset-expo": "^7.1.0"
   },
   "private": true
