--- a/frontend-opal/jsconfig.json
+++ b/frontend-opal/jsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "baseUrl": "src",
+        "baseUrl": ".",
         "paths": {
             "~/*": ["./*"],
-            "components/*": ["components/*"],
-            "actions/*": ["actions/*"],
-            "reducers/*": ["reducers/*"]
+            "components/*": ["src/components/*"],
+            "actions/*": ["src/actions/*"],
+            "reducers/*": ["src/reducers/*"]
         }
     }
 }
