seperate lint into two folders

--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "nodemon -r tsconfig-paths/register main.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ./ --ext .js --fix"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,13 @@
     "nodemon": "^1.19.4"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "jest": "^24.9.0",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "tsconfig-paths": "^3.9.0"
   },
