--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSA Opal",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint backend-opal frontend-opal --ext .js --fix",
+    "lint": "./lint.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "pre-commit": [
@@ -20,17 +20,7 @@
     "url": "https://github.com/green-fox-academy/JSA-Opal-ShenZhen/issues"
   },
   "homepage": "https://github.com/green-fox-academy/JSA-Opal-ShenZhen#readme",
-  "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-plugin-react-native": "^3.8.1",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.19.1"
+  "dependencies": {
+    "pre-commit": "^1.2.2"
   }
 }
