--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -24,16 +24,17 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-font": "~7.0.0",
     "lodash": "^4.17.15",
     "native-base": "^2.13.8",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-svg": "9.9.5",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "victory-native": "^33.0.0",
-    "expo-font": "~7.0.0"
+    "victory-native": "^33.0.0"
   },
   "devDependencies": {
     "babel-jest": "^24.9.0",
