update link module

--- a/frontend-opal/.eslintrc.json
+++ b/frontend-opal/.eslintrc.json
@@ -27,6 +27,7 @@
     "rules": {
         "prettier/prettier": ["error"],
         "react/jsx-filename-extension": ["warn"],
-        "no-use-before-define": ["warn"]
+        "no-use-before-define": ["warn"],
+	"no-undef": ["warn"]
     }
 }
