--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ./ --ext .js --fix"
   },
   "jest": {
     "preset": "jest-expo",
@@ -40,8 +41,18 @@
     "babel-jest": "^24.9.0",
     "babel-plugin-root-import": "^6.4.1",
     "babel-preset-expo": "^7.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-native": "^3.8.1",
     "i": "^0.3.6",
     "jest-expo": "^35.0.0",
+    "prettier": "^1.19.1",
     "react-test-renderer": "^16.8.3"
   },
   "private": true
