--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint ./ --ext .js --fix"
   },
   "dependencies": {
     "expo": "^35.0.0",
@@ -15,8 +16,19 @@
     "react-native-web": "^0.11.7"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "babel-plugin-root-import": "^6.4.1",
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^7.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-native": "^3.8.1",
+    "prettier": "^1.19.1"
   },
   "private": true
 }
