adjust some lint rules and fix the mix use of * and /

--- a/frontend-opal/.eslintrc.json
+++ b/frontend-opal/.eslintrc.json
@@ -25,8 +25,9 @@
     "parser": "babel-eslint",
     "rules": {
 	"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-
 	"no-use-before-define": "warn",
-	"no-undef": "warn"
+    "no-undef": "warn",
+    "import/no-unresolved": "warn",
+    "no-unused-vars": "warn"
     }
 }
