--- a/frontend-opal/jsconfig.json
+++ b/frontend-opal/jsconfig.json
@@ -5,7 +5,8 @@
             "~/*": ["./*"],
             "components/*": ["src/components/*"],
             "actions/*": ["src/actions/*"],
-            "reducers/*": ["src/reducers/*"]
+            "reducers/*": ["src/reducers/*"],
+            "assets/*": ["assets/*"]
         }
     }
 }
