--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -34,6 +34,9 @@
     "react-native-svg": "9.9.5",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "victory-native": "^33.0.0"
   },
   "devDependencies": {
