--- a/frontend-opal/jsconfig.json
+++ b/frontend-opal/jsconfig.json
@@ -6,7 +6,8 @@
             "components/*": ["src/components/*"],
             "actions/*": ["src/actions/*"],
             "reducers/*": ["src/reducers/*"],
-            "assets/*": ["assets/*"]
+            "assets/*": ["assets/*"],
+            "thunks/*": ["src/thunks/*"]
         }
     }
 }
