--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./ --ext .js .json --fix",
+    "lint": "eslint ./ --ext .js --fix",
     "test": "jest"
   },
   "jest": {
