Mock list watchlist (#10)
* implement watchlists endpoint and test file

* refactor files (undo deleted files)

* add ignore rule for 'coverage' folder

* refactor original main.js

* add env file and seperate server logic and listern action

* remove 'export' action

* fix rebase conflict

* add README file for env configuration

* delete .json.swp extension file

--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "eslint-plugin-react-native": "^3.8.1",
     "expo": "^35.0.0",
     "expo-font": "~7.0.0",
     "native-base": "^2.13.8",
