chang tab to 2 spaces

--- a/backend-opal/tsconfig.json
+++ b/backend-opal/tsconfig.json
@@ -1,10 +1,14 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "server/*": ["src/server/*"],
-            "database/*": ["src/server/*"]
-        },
-        "allowJs": true
-    }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "server/*": [
+        "src/server/*"
+      ],
+      "database/*": [
+        "src/server/*"
+      ]
+    },
+    "allowJs": true
+  }
 }
