--- a/frontend-opal/.prettierrc
+++ b/frontend-opal/.prettierrc
@@ -1,4 +1,6 @@
 {
-    "printWidth": 100,
-    "singleQuote": true
+  "printWidth": 100,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false
 }
