--- a/frontend-opal/jsconfig.json
+++ b/frontend-opal/jsconfig.json
@@ -1,12 +1,22 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "~/*": ["./*"],
-            "components/*": ["src/components/*"],
-            "actions/*": ["src/actions/*"],
-            "reducers/*": ["src/reducers/*"],
-            "assets/*": ["assets/*"]
-        }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "./*"
+      ],
+      "components/*": [
+        "src/components/*"
+      ],
+      "actions/*": [
+        "src/actions/*"
+      ],
+      "reducers/*": [
+        "src/reducers/*"
+      ],
+      "assets/*": [
+        "assets/*"
+      ]
     }
+  }
 }
