--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./ --ext .js --fix",
+    "lint": "eslint **/*.{js,jsx} --ext .js --fix",
     "test": "jest"
   },
   "jest": {
@@ -35,6 +35,9 @@
     "react-native-svg": "9.9.5",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "victory-native": "^33.0.0"
   },
   "devDependencies": {
@@ -45,6 +48,7 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
