--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon -r tsconfig-paths/register main.js",
     "test": "jest",
-    "lint": "eslint ./ --ext .js --fix"
+    "lint": "eslint **/*.{js,jsx} --ext .js",
+    "lint-fix": "eslint **/*.{js,jsx} --ext .js --fix"
   },
   "author": "",
   "license": "ISC",
