--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -2,9 +2,9 @@
   "name": "backend-opal",
   "version": "1.0.0",
   "description": "jsa opal investment feature backend",
-  "main": "main.js",
+  "main": "start.js",
   "scripts": {
-    "start": "nodemon -r tsconfig-paths/register main.js",
+    "start": "nodemon -r tsconfig-paths/register start.js",
     "test": "jest",
     "lint": "eslint **/*.{js,jsx} --ext .js",
     "lint-fix": "eslint **/*.{js,jsx} --ext .js --fix"
