--- a/frontend-opal/.eslintrc.json
+++ b/frontend-opal/.eslintrc.json
@@ -27,6 +27,9 @@
 	"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
 
 	"no-use-before-define": "warn",
-	"no-undef": "warn"
+    "no-undef": "warn",
+    "global-require" : "warn",
+    "no-shadow" : "warn"
+
     }
 }
