--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -2,9 +2,9 @@
   "name": "backend-opal",
   "version": "1.0.0",
   "description": "jsa opal investment feature backend",
-  "main": "main.js",
+  "main": "start.js",
   "scripts": {
-    "start": "nodemon -r tsconfig-paths/register main.js",
+    "start": "nodemon -r tsconfig-paths/register start.js",
     "test": "jest",
     "lint": "eslint **/*.{js,jsx} --ext .js",
     "lint-fix": "eslint **/*.{js,jsx} --ext .js --fix"
@@ -23,6 +23,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-prettier": "^3.1.1",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
