--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,17 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-# test circleci
 version: 2
 jobs:
   backend-test:
     docker:
-      # specify the version you desire here
       - image: circleci/node:10.16.3
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
 
     working_directory: ~/backend-opal
 
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - backend-dependencies-{{ checksum "./backend-opal/package-lock.json" }}
-            # fallback to using the latest cache if no exact match is found
             - backend-dependencies-
 
       - run: 
@@ -35,10 +23,18 @@ jobs:
             - ./backend-opal/node_modules
           key: backend-dependencies-{{ checksum "./backend-opal/package-lock.json" }}
 
-      # run tests!
       - run: 
           name: backend test
           command: 'cd backend-opal && npm test'
+
+  deploy-backend:
+    docker: 
+      - image: circleci/node:10.16.3
+
+    steps:
+      - run:
+          name: check env vars
+          command: echo $AWS_PEM
 
   frontend-test:
     docker: 
@@ -51,7 +47,6 @@ jobs:
       - restore_cache:
           keys:
             - frontend-dependencies-{{ checksum "./frontend-opal/package-lock.json" }}
-            # fallback to using the latest cache if no exact match is found
             - frontend-dependencies-
 
       - run:
@@ -77,6 +72,9 @@ workflows:
               only: 
                 - master
                 - honda-issue70-ci
+      - deploy-backend:
+          requires:
+            - backend-test
       - frontend-test:
           filters:
             branches:
