--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ jobs:
           command: |
             mkdir ~/.ssh
             echo $AWS_PEM | base64 --decode > ~/.ssh/jsa-opal.pem
-            cat ~/.ssh/jsa-opal.pem
+            npm install pm2 -g
+            pm2 deploy ecosystem.config.js production setup
 
   frontend-test:
     docker: 
