--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,11 @@ jobs:
 
     steps:
       - run:
-          name: check env vars
+          name: deploy with pm2
           command: |
             mkdir ~/.ssh
             echo $AWS_PEM | base64 --decode > ~/.ssh/jsa-opal.pem
-            npm install pm2 -g
+            sudo npm install pm2 -g
             pm2 deploy ecosystem.config.js production setup
 
   frontend-test:
