--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             mkdir ~/.ssh
             echo $AWS_PEM | base64 --decode > ~/.ssh/jsa-opal.pem
             sudo npm install pm2 -g
-            pm2 deploy ecosystem.config.js production setup
+            cd backend-opal && pm2 deploy ecosystem.config.js production setup
 
   frontend-test:
     docker: 
