--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,9 +44,8 @@ jobs:
           command: |
             mkdir ~/.ssh
             echo $AWS_PEM | base64 --decode > ~/.ssh/jsa-opal.pem
-            ls ~/
             sudo npm install pm2 -g
-            cd backend-opal && pm2 deploy ecosystem.config.js production setup
+            cd ~/backend-opal && pm2 deploy ecosystem.config.js production setup
 
   frontend-test:
     docker: 
