--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
             mkdir ~/.ssh
             echo $AWS_PEM | base64 --decode > ~/.ssh/jsa-opal.pem
             sudo npm install pm2 -g
-            cd ~/backend-opal && pm2 deploy ecosystem.config.js production setup
+            cd ~/backend-opal && ls && pm2 deploy ecosystem.config.js production setup
 
   frontend-test:
     docker: 
