--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
           name: pm2 deploy
           command: |
             sudo npm install pm2 -g
-            cd ~/backend-opal && pm2 deploy ecosystem.config.js production setup -y
+            cd ~/backend-opal && pm2 deploy ecosystem.config.js production setup
 
   frontend-test:
     docker: 
