--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: 'cd backend-opal && npm test'
 
       - persist_to_workspace:
-          root: .
+          root: ～
           paths:
             - backend-opal
   
@@ -57,7 +57,7 @@ jobs:
           name: pm2 deploy
           command: |
             sudo npm install pm2 -g
-            cd ~/backend-opal && pm2 deploy ecosystem.config.js production
+            cd ~/backend-opal/backend-opal && pm2 deploy ecosystem.config.js production
 
   # test frontend
   frontend-test:
