--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: 'cd backend-opal && npm test'
 
       - persist_to_workspace:
-          root: ～
+          root: /home/circleci/
           paths:
             - backend-opal
   
