--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -4,8 +4,8 @@
   "description": "jsa opal investment feature backend",
   "main": "start.js",
   "scripts": {
-    "start": "export NODE_ENV=development && node migration.js up && nodemon -r tsconfig-paths/register start.js",
-    "start-prod": "export NODE_ENV=production && node migration.js up && nodemon -r tsconfig-paths/register start.js",
+    "start": "export NODE_ENV=dev && node migration.js up && nodemon -r tsconfig-paths/register start.js",
+    "start-prod": "export NODE_ENV=prod && node migration.js up && nodemon -r tsconfig-paths/register start.js",
     "test": "jest",
     "lint": "eslint **/*.{js,jsx} --ext .js",
     "lint-fix": "eslint **/*.{js,jsx} --ext .js --fix"
