--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "JSA Opal",
   "main": "index.js",
   "scripts": {
-    "lint": "./scripts/lint.sh",
-    "lint-fix": "./scripts/lint-fix.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "cd backend-opal && npm run lint && cd .. && cd frontend-opal && npm run lint",
+    "lint-fix": "cd backend-opal && npm run lint-fix && cd .. && cd frontend-opal && npm run lint-fix",
+    "test": "cd backend-opal && npm test"
   },
   "pre-commit": [
     "lint"
