for the conflict

--- a/backend-opal/package.json
+++ b/backend-opal/package.json
@@ -4,8 +4,8 @@
   "description": "jsa opal investment feature backend",
   "main": "start.js",
   "scripts": {
-    "start": "export NODE_ENV=dev && node migration.js up && nodemon -r tsconfig-paths/register start.js",
-    "start-prod": "export NODE_ENV=prod && node migration.js up && nodemon -r tsconfig-paths/register start.js",
+    "start": "cross-env NODE_ENV=dev && node migration.js up && nodemon -r tsconfig-paths/register start.js",
+    "start-prod": "cross-env NODE_ENV=prod && node migration.js up && nodemon -r tsconfig-paths/register start.js",
     "test": "jest",
     "lint": "eslint **/*.{js,jsx} --ext .js",
     "lint-fix": "eslint **/*.{js,jsx} --ext .js --fix"
@@ -21,6 +21,7 @@
     "nodemon": "^1.19.4"
   },
   "devDependencies": {
+    "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
