--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -45,6 +45,7 @@
     "babel-eslint": "^10.0.3",
     "babel-plugin-root-import": "^6.4.1",
     "babel-preset-expo": "^7.1.0",
+    "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
