--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,6 @@ workflows:
             branches:
               only: 
                 - master
-                - honda-issue70-ci
       - deploy-backend:
           requires:
             - backend-test
@@ -104,3 +103,4 @@ workflows:
             branches:
               only: 
                 - master
+                - watchlistFE
