--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "lint": "cd backend-opal && npm run lint && cd .. && cd frontend-opal && npm run lint",
     "lint-fix": "cd backend-opal && npm run lint-fix && cd .. && cd frontend-opal && npm run lint-fix",
-    "test": "cd backend-opal && npm test"
+    "test": "cd backend-opal && npm test && cd .. && cd frontend-opal && npm test"
   },
   "pre-commit": [
-    "lint"
+    "lint",
+    "test"
   ],
   "repository": {
     "type": "git",
