--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -33,6 +33,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
@@ -62,6 +63,7 @@
     "eslint-plugin-react-native": "^3.8.1",
     "i": "^0.3.6",
     "jest-expo": "^35.0.0",
+    "metro-react-native-babel-preset": "^0.57.0",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.8.3"
   },
