--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -37,6 +37,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-redux": "^7.1.3",
+    "react-native-dotenv": "^0.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "victory-native": "^33.0.0"
@@ -57,6 +58,7 @@
     "eslint-plugin-react-native": "^3.8.1",
     "i": "^0.3.6",
     "jest-expo": "^35.0.0",
+    "metro-react-native-babel-preset": "^0.57.0",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.8.3"
   },
