--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-native": "^3.8.1",
     "expo": "^35.0.0",
     "expo-font": "~7.0.0",
+    "google-palette": "^1.1.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
@@ -39,6 +40,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "react-native-dotenv": "^0.2.0",
     "victory-native": "^33.0.0"
   },
   "devDependencies": {
