--- a/frontend-opal/package.json
+++ b/frontend-opal/package.json
@@ -44,6 +44,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
+    "react-native-dotenv": "^0.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "victory-native": "^33.0.0"
