add container folder into alias

--- a/frontend-opal/jsconfig.json
+++ b/frontend-opal/jsconfig.json
@@ -19,6 +19,9 @@
       ],
       "thunks/*": [
         "src/thunks/*"
+      ],
+      "container/*": [
+        "src/container/*"
       ]
     }
   }
